# PythonCITemplate

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: coverage-report.yml  pages-deploy.yml  python-app.yml
docs/: conf.py  example_app.rst  index.rst  modules.rst
example_app/: code.py
tests/: test_code.py
